# AnimeGrok

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
locale/en/LC_MESSAGES/: django.po
src/: routers.py
src/api/: permissions.py  serializers.py  urls.py  views.py
src/articles/: admin.py  forms.py  models.py  serializers.py  services.py  translation.py  urls.py  views.py
src/articles/migrations/: 0001_initial.py  0002_initial.py  0005_video.py  (+23 more)
src/base/: mixins.py
src/gens/: posts_gen.py
src/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
src/recomendations/: admin.py  apps.py  models.py  urls.py  views.py
src/subscriptions/: admin.py  models.py  urls.py  views.py
templates/: base.html  footer.html  header.html  home.html
templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
templates/articles/: article-details.html  article-list.html  home_slider_articles.html  list_new_reviews.html  list_top_views.html  list_top_views_Original.html  recommended_articles.html  reviews_list.html
templates/include/: pagination.html
templates/pages/: contact.html
templates/socialaccount/: authentication_error.html  connections.html  login.html  login_cancelled.html  signup.html
(+36 files in other folders)
